Begin native imaging the JavaFX app.